fix: tighten spacing

--- a/src/App.css
+++ b/src/App.css
@@ -66,5 +66,5 @@ img {
   overflow: hidden;
   width: 50px;
   height: 50px;
-  margin-right: 20px;
+  margin-right: 10px;
 }
